<resources>
    <string name="app_name">NovelKey</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">NovelKeys</string>
    <string name="nav_header_subtitle">CMPSC 475 Project</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Products</string>
    <string name="menu_slideshow">My Orders</string>
    <string name="menu_logout">Log out</string>


    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>


    <string name="enter_email">Enter email</string>
    <string name="enter_pass">Enter password</string>
    <string name="error">Error</string>
</resources>